@@ -1,11 +1,6 @@
 Build.PL
 Changes
-LICENSE
 MANIFEST
-META.json
-META.yml
-README
-SIGNATURE
 bin/module-provision
 lib/Module/Provision.pm
 lib/Module/Provision/Base.pm
@@ -39,8 +34,6 @@ share/gitpre-commit
 share/perl_localenv
 share/perl_module.pm
 share/perl_program.pl
-t/00report-metadata.dd
-t/00report-metadata.t
 t/02pod.t
 t/03podcoverage.t
 t/05kwalitee.t
