@@ -43,6 +43,10 @@ Module::Build     = 0.4004
 [Prereqs / BuildRequires]
 version           = 0.88
 Module::Build     = 0.4004
+
+[Prereqs / TestRequires]
+version           = 0.88
+Module::Build     = 0.4004
 Test::Requires    = 0.06
 
 [Meta::Dynamic::Config]
